--- a/public/css/style.css
+++ b/public/css/style.css
@@ -799,7 +799,6 @@ parallax-section {
 }
 .bformBox .formrow .form-control {
     height: auto;
-    border-radius: 0;
     padding: 10px 15px;
     font-size: 22px;
     border-color: #ddd;
@@ -2833,7 +2832,7 @@ blockquote:after {
     margin-top: 1rem;
     color:white;
     background: #000;
-    /* border-radius:2rem;  */
+    border-radius:2rem!important; 
     box-shadow: 0px 10px 10px rgba(0 0 0 /100%); 
 }
 
